--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -222,7 +222,7 @@ Por otro lado, la brecha de inflación por regiones geográficas, si es sistemá
 
 ## Inflación para hogares de mayores y menores ingresos
 
-La Figura 1 muestra la diferencia entre la inflación anual experimentada por el 20 por ciento de la población de menores ingresos y el 20 por ciento de mayores ingresos (medido por el ingreso familiar per capita del hogar). Durante el mes de `r meses[mes_t,1]`, el comportamiento de las tasas de inflación interanuales experimentadas por los hogares de mayores y menores ingresos mantuvo el mismo comportamiento que en el último año. **Durante `r meses[mes_t,1]`, la brecha se ubicó en `r sprintf("%.2f",abs(dif_q1q5_ipcse_text))` puntos porcentuales en favor de los hogares de `r text_q1q5_mayores_o_menores` ingresos.** Este comportamiento se explica por los valores aún elevados de las tasas de inflación interanuales de las divisiones en las que los hogares de mayores ingresos consumen más, como Restaurantes y hoteles,  Transporte, Salud y Educación, combinado con tasas de inflación interanual de las divisiones en las que hogares de menores ingresos consumen más, como Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado. El agrandamiento de la brecha con respecto al último mes se debe al aumento de la tasa de inflación interanual del índice de Restaurantes y Hoteles. 
+La Figura 1 muestra la diferencia entre la inflación anual experimentada por el 20 por ciento de la población de menores ingresos y el 20 por ciento de mayores ingresos (medido por el ingreso familiar per capita del hogar). Durante el mes de `r meses[mes_t,1]`, el comportamiento de las tasas de inflación interanuales experimentadas por los hogares de mayores y menores ingresos mantuvo el mismo comportamiento que en el último año. **Durante `r meses[mes_t,1]`, la brecha se ubicó en `r sprintf("%.2f",abs(dif_q1q5_ipcse_text))` puntos porcentuales en favor de los hogares de `r text_q1q5_mayores_o_menores` ingresos.** Este comportamiento se explica por los valores aún elevados de las tasas de inflación interanuales de las divisiones en las que los hogares de mayores ingresos consumen más, como Restaurantes y hoteles,  Transporte, Salud y Educación, combinado con tasas de inflación interanual de las divisiones en las que hogares de menores ingresos consumen más, como Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado. 
 
 
 [**Figura 1. Diferencia entre la tasa de inflación interanual entre el 20% con menores ingresos y el 20% con mayores ingresos**]{style="color:#777;font-size:13    .0pt;"}
@@ -250,7 +250,7 @@ La Figura 1 muestra la diferencia entre la inflación anual experimentada por el
 
 <br>
 
-La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflación interanual de `r meses[mes_t,1]` del 20 por ciento de los hogares de menores y mayores ingresos. **La división de Alimentos y bebidas no alcohólicas explicó casi completamente la parte que aumenta la brecha en la inflación para los hogares de menores ingresos en comparación con los hogares de mayores ingresos.** En particular, esta división explicó 6.77 puntos porcentuales de la diferencia. En la otra dirección, las divisiones que más contribuyeron a aumentar la brecha en detrimento de los hogares de mayores ingresos fueron Restaurantes y hoteles, Salud y Transporte. Estas tres divisiones contribuyeron a reducir la brecha en la inflación enfrentada por los hogares de menores y mayores ingresos en 6.77 puntos porcentuales. 
+La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflación interanual de `r meses[mes_t,1]` del 20 por ciento de los hogares de menores y mayores ingresos. **La división de Alimentos y bebidas no alcohólicas explicó casi completamente la parte que aumenta la brecha en la inflación para los hogares de menores ingresos en comparación con los hogares de mayores ingresos.** En particular, esta división explicó 5.81 puntos porcentuales de la diferencia. En la otra dirección, las divisiones que más contribuyeron a aumentar la brecha en detrimento de los hogares de mayores ingresos fueron Restaurantes y hoteles, Transporte y Salud. Estas tres divisiones contribuyeron a reducir la brecha en la inflación enfrentada por los hogares de menores y mayores ingresos en 5.65 puntos porcentuales. 
 
 <br>
 
@@ -277,7 +277,7 @@ La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflac
 <br>
 
 
-El Cuadro 1 muestra el impacto diferencial de la inflación por quintiles de ingreso per cápita familiar para los datos oficiales. **Los hogares de menores ingresos, quintil 1, enfrentaron en `r meses[mes_t,1]` una inflación de `r sprintf("%.2f",cuadro4[1,3])` por ciento comparada con una inflación de `r sprintf("%.2f",cuadro4[5,3])` por ciento para los hogares del 20 por ciento de mayores ingresos** (ver Figura 3). La explicación se debe a la conjunción de aumentos relativamente bajos en los índices de Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado, con los aumentos relativamente más altos de los índices de precios oficiales de las divisiones en las que los hogares de mayores ingresos (quintil 5) más consumen, especialmente, en las divisiones de Restuarantes y hoteles y Salud. 
+El Cuadro 1 muestra el impacto diferencial de la inflación por quintiles de ingreso per cápita familiar para los datos oficiales. **Los hogares de menores ingresos, quintil 1, enfrentaron en `r meses[mes_t,1]` una inflación de `r sprintf("%.2f",cuadro4[1,3])` por ciento comparada con una inflación de `r sprintf("%.2f",cuadro4[5,3])` por ciento para los hogares del 20 por ciento de mayores ingresos** (ver Figura 3). En este mes en particular, la diferencia entre la tasa de inflación mensual que enfrentaron los hogares de menores ingresos y la de los hogares de mayores ingresos fue de 0.18 puntos porcentuales en detrimento de los hogares de mayores ingresos. La divergencia en comparación con la medición sin estacionalidad, se explica por la diferencia de la incidencia de Alimentos y bebidas no alcohólicas. Si bien en ambos casos esta división contribuyó a aumentar la brecha en detrimento de los hogares de menores ingresos, la incidencia es mayor en la medición sin estacionalidad, llevando a que la inflación sin estacionalidad sea mayor para el 20 por ciento de los hogares del quintil 1 que para el quintil 5. 
 
 <br>
 
@@ -338,7 +338,7 @@ cuadro1deciles %>%
 
 La Figura 5 muestra la tendencia de la brecha de inflación por deciles de ingreso comparada con la magnitud de la brecha de inflación por regiones geográficas. 
 
-La brecha de inflación geográfica se calculó como la diferencia entre la tasa de inflación interanual de la región del país con mayor inflación y la tasa de inflación de la región del país con menor inflación. La figura refleja la importancia relativa de la brecha de inflación por regiones del país. Por ahora no es importante identificar que regiones tuvieron la mayor y menor inflación sino mostrar el alcance de las diferencias entre las brechas de inflación por deciles de ingreso y por regiones geográficas. En promedio, la brecha de inflación por regiones geográficas fue de 1.13 puntos porcentuales, más de 3.5 veces más grande que la brecha por deciles de ingreso de 0.32. De hecho esta diferencia se hace mucho más grande al final del período y no hay ningún momento desde 2017 en el que la brecha por deciles de ingreso sea mayor a la brecha de inflación por regiones geográficas. Sin embargo, durante los últimos meses, la brecha de inflación por regiones se acercó a su promedio histórico 2018-2022, alcanzando 0.85 puntos porcentuales, contra 0.35 de la brecha de inflación por ingresos.     
+La brecha de inflación geográfica se calculó como la diferencia entre la tasa de inflación interanual de la región del país con mayor inflación y la tasa de inflación de la región del país con menor inflación. La figura refleja la importancia relativa de la brecha de inflación por regiones del país. Por ahora no es importante identificar que regiones tuvieron la mayor y menor inflación sino mostrar el alcance de las diferencias entre las brechas de inflación por deciles de ingreso y por regiones geográficas. En promedio, la brecha de inflación por regiones geográficas fue de 1.13 puntos porcentuales, más de 3.5 veces más grande que la brecha por deciles de ingreso de 0.32. De hecho esta diferencia se hace mucho más grande al final del período y no hay ningún momento desde 2017 en el que la brecha por deciles de ingreso sea mayor a la brecha de inflación por regiones geográficas. Sin embargo, durante los últimos meses, la brecha de inflación por regiones se acercó a su promedio histórico 2018-2022, alcanzando 0.90 puntos porcentuales, contra 0.35 de la brecha de inflación por ingresos.    
 
 [**Figura 5. Desigualdad geográfica y desigualdad de ingresos**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -374,7 +374,7 @@ ggplotly(f9) %>% layout(yaxis = list(hoverformat = '.2f'))
 
 ```
 
-En general, no hay nada especial o estructural en las canastas de consumo de los hogares de menores ingresos pero si hay fuertes razones para pensar que los factores estructurales (costos de transporte, regulaciones provinciales, etc.) desempeñan un papel clave a la hora de distinguir la inflación por regiones. Con esto en mente, el mapa muestra los valores de inflación acumulada en cada región del país desde diciembre de 2016. Colores más claros indican mayor inflación acumulada y colores más oscuros muestran menor inflación acumulada. **Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la región Cuyo con 8823.8 por ciento, mientras que la región que menos inflación acumuló fue la región Noreste con 8663.8 por ciento.** La brecha de inflación entre estas dos regiones alcanza los 160 puntos porcentuales. En el mismo período de tiempo la inflación aumulada medida por el IPC nivel general fue de 8714.5 por ciento. 
+En general, no hay nada especial o estructural en las canastas de consumo de los hogares de menores ingresos pero si hay fuertes razones para pensar que los factores estructurales (costos de transporte, regulaciones provinciales, etc.) desempeñan un papel clave a la hora de distinguir la inflación por regiones. Con esto en mente, el mapa muestra los valores de inflación acumulada en cada región del país desde diciembre de 2016. Colores más claros indican mayor inflación acumulada y colores más oscuros muestran menor inflación acumulada. **Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la Patagonia con 9141.7 por ciento, mientras que la región que menos inflación acumuló fue la región Noreste con 8904.9 por ciento.** La brecha de inflación entre estas dos regiones alcanza los 200 puntos porcentuales. En el mismo período de tiempo la inflación aumulada medida por el IPC nivel general fue de 9024.0 por ciento.  
 
 [**Figura 6. Nivel de precios acumulado desde diciembre de 2016 en cada región**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -412,7 +412,7 @@ htmltools::browsable(tagList(
 
 ```
 
-Después de la pandemia de COVID-19 la dinámica de la inflación por regiones geográficas parece haber cambiado. El siguiente mapa muestra los valores de inflación acumulada en cada región del país desde febrero de 2021. Hasta `r meses[mes_t,1]`  de `r year_t`, las regiones que más inflación acumularon fueron la región Patagonia y el Gran Buenos Aires, mientras que la región que menos inflación acumuló fue la región Noreste. En el GBA el nivel general de precios acumulado fue de 2150.2 por ciento mientras que en la región Noreste fue de 1975.4 por ciento (Figura 7).
+Después de la pandemia de COVID-19 la dinámica de la inflación por regiones geográficas no parece haber cambiado mucho. El siguiente mapa muestra los valores de inflación acumulada en cada región del país desde febrero de 2021. Hasta `r meses[mes_t,1]`  de `r year_t`, las regiones que más inflación acumularon fueron la región Gran Buenos Aires y Patagonia, mientras que la región que menos inflación acumuló fue la región Noreste. En el GBA el nivel general de precios acumulado fue de 2234.7 por ciento mientras que en la región Noreste fue de 2030.4 por ciento (Figura 7).
 
 [**Figura 7. Nivel de precios acumulado desde febrero de 2021 en cada región**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -442,7 +442,7 @@ htmltools::browsable(tagList(
 ```
 
 
-Tomando en cuenta la evolución de la inflación desde 2017, la brecha de inflación geográfica se definió como el cociente entre los índices de precios para las regiones Cuyo (menor inflación acumulada) y Patagonia (mayor inflación acumulada). La Figura 8 muestra la brecha de inflación geografica calculada de esta manera comparada con la brecha de inflación por deciles de ingreso calculada como el cociente del índice de precios para el decil más bajo (decil 1) contra el índice de precios del decil más alto (decil 10). El panel de la izquierda muestra la comparación utilizando el nivel general y el de la derecha usa la inflación núcleo. Como se observa en el panel de la izquierda, salvo en los primeros meses de 2017 la magnitud de la brecha geográfica es siempre mayor a la brecha de inflación acumulada por deciles de ingreso. En el mes de `r meses[mes_t,1]` se cerró la brecha de inflación geográfica y la brecha por deciles de ingreso siendo esta última apenas más alta. El panel de la derecha muestra un panorama similar para estas brechas calculadas para la inflación núcleo, excepto para el último mes. Se observa una mayor volatilidad en la brecha por regiones geográficas comparada con la volatilidad calculada con el nivel general de la inflación pero al igual que con este caso la brecha por deciles de ingreso es más baja que la regional. En `r meses[mes_t,1]` la brecha de inflación por regiones geográficas, medida por la inflación núcleo, es alrededor de 6 puntos porcentuales más grande que la brecha por deciles de ingreso. Particularmente, en mayo de 2025, la brecha por regiones en la inflación núcleo creció, mientras que la brecha por ingresos toma valores negativos. 
+Tomando en cuenta la evolución de la inflación desde 2017, la brecha de inflación geográfica se definió como el cociente entre los índices de precios para las regiones Cuyo (menor inflación acumulada) y Patagonia (mayor inflación acumulada). La Figura 8 muestra la brecha de inflación geografica calculada de esta manera comparada con la brecha de inflación por deciles de ingreso calculada como el cociente del índice de precios para el decil más bajo (decil 1) contra el índice de precios del decil más alto (decil 10). El panel de la izquierda muestra la comparación utilizando el nivel general y el de la derecha usa la inflación núcleo. Como se observa en el panel de la izquierda, salvo en los primeros meses de 2017 la magnitud de la brecha geográfica es siempre mayor a la brecha de inflación acumulada por deciles de ingreso. En el mes de `r meses[mes_t,1]`. siguiendo la tendencia del mes anterior, la brecha de inflación geográfica se encontró por debajo de la brecha por deciles de ingreso. El panel de la derecha muestra que durante `r meses[mes_t,1]` la brecha de inflación por deciles de ingreso se mantiene relativamente estable en comparación con el mes anterior. Por el contrario, la brecha por regiones geográficas muestra una reducción. Se observa una mayor volatilidad en la brecha por regiones geográficas comparada con la volatilidad calculada con el nivel general de la inflación. A diferencia del nivel general de infación, la brecha por deciles de ingreso es más baja que la regional. En `r meses[mes_t,1]` la brecha de inflación por regiones geográficas, medida por la inflación núcleo, es alrededor de 3 puntos porcentuales más grande que la brecha por deciles de ingreso.  
 
 
 ```{r f17, message=FALSE, echo=FALSE, fig.dim = c(12, 6.75), warning=FALSE}
@@ -545,7 +545,7 @@ fig
 
 ## Desigualdad intra-región
 
-La Figura 9 muestra la brecha de inflación interanual por deciles de ingreso desde 2016 en el panel de la izquierda y desde 2021 en el panel de la derecha para las diferentes regiones del país. Esto es el promedio de la diferencia entre la inflación interanual que enfrentaron los hogares del decil 1 (muy bajos ingresos) y la inflación interanual que enfrentaron los hogares del decil 10 (muy altos ingresos). **Un valor positivo indica que la inflación interanual que enfrentaron los hogares de muy bajos ingresos fue mayor a la que enfrentaron los hogares de muy altos ingresos.** Ambos paneles cuentan casi la misma historia, la brecha de inflación por deciles de ingreso es mayormente positiva en la mayoría de las regiones tanto desde 2016 como desde 2021. El panel de la izquierda muestra que la brecha de inflación por deciles de ingreso fue más alta en la región Patagonia alcanzando alrededor de 0.53  puntos porcentuales y fue negativa en la región Noreste con una brecha de -0.096 puntos porcentuales. Si tomamos la brecha desde 2021, panel derecho de la figura, en un extremo se encuentra la región Patagonia con una brecha por deciles de 1.13 puntos porcentuales y en el otro la región Noreste donde la brecha fue -0.61 puntos porcentuales indicando que en esa región, además de en las regiones Noroeste y Cuyo, los hogares de muy bajos ingresos enfrentaron una inflación más baja que la que enfrentaron los hogares de muy altos ingresos.
+La Figura 9 muestra la brecha de inflación interanual por deciles de ingreso desde 2016 en el panel de la izquierda y desde 2021 en el panel de la derecha para las diferentes regiones del país. Esto es el promedio de la diferencia entre la inflación interanual que enfrentaron los hogares del decil 1 (muy bajos ingresos) y la inflación interanual que enfrentaron los hogares del decil 10 (muy altos ingresos). **Un valor positivo indica que la inflación interanual que enfrentaron los hogares de muy bajos ingresos fue mayor a la que enfrentaron los hogares de muy altos ingresos.** El comportamiento es dispar entre las regiones: las regiones Pampeana y Patagonia muestran brechas positivas tanto desde el 2016 como desde el 2021, en cambio las regiones Noreste y Cuyo muestran brechas negativas desde ambos años. Por último, para las regiones Noroeste y Gran Buenos Aires la brecha es positiva desde el 2016 pero negativa desde el 2021. El panel de la izquierda muestra que la brecha de inflación por deciles de ingreso fue más alta en la región Patagonia alcanzando alrededor de 0.497  puntos porcentuales y fue negativa en la región Cuyo con una brecha de -0.141 puntos porcentuales. Si tomamos la brecha desde 2021, panel derecho de la figura, en un extremo se encuentra la región Patagonia con una brecha por deciles de 1.06 puntos porcentuales y en el otro la región Noreste donde la brecha fue -0.61 puntos porcentuales indicando que en esa región los hogares de muy bajos ingresos enfrentaron una inflación más baja que la que enfrentaron los hogares de muy altos ingresos.
 
 
 
@@ -611,7 +611,7 @@ browsable(
 
 <br>
 
-La Figura 10 muestra que la brecha de inflación acumulada entre el decil 1 y el decil 10. Si consideramos esta brecha desde 2016, panel de la izquierda, se puede ver que en casi todas las regiones del país los hogares de muy bajos ingresos enfrentaron una inflación acumulada mayor que los hogares de muy altos ingresos; la única excepción dada por la región de Cuyo. En el GBA los hogares de menores ingresos enfrentaron la mayor brecha que fue de 57 puntos porcentuales. La situación es más heterogénea si se considera esta brecha desde 2021 porque partiendo de ese año, en las regiónes Patagonia y Pampeana los hogares de muy altos ingresos enfrentaron una inflación menor que los hogares de muy bajos ingresos, mientras que en las otras cuatro regiones del país la situación fue la opuesta, siendo incluso más marcada para las regiones Noroeste, Noreste y Cuyo. 
+La Figura 10 muestra que la brecha de inflación acumulada entre el decil 1 y el decil 10. Si consideramos esta brecha desde 2016, panel de la izquierda, se puede ver que en casi todas las regiones del país los hogares de muy bajos ingresos enfrentaron una inflación acumulada menor que los hogares de muy altos ingresos; la única excepción dada por la regiones Pampeana y Gran Buenos Aires. En la región Pampena los hogares de menores ingresos enfrentaron la mayor brecha que fue de 13 puntos porcentuales. Si se considera la brecha desde el 2021 la situación es diferente. En el panel de la derecha los hogares de muy bajos ingresos experimentaron una inflación acumulada menor que los hogares de muy altos ingresos en todas las regiones menos en la región Patagonia, donde la brecha entre los hogares del decil 1 y decil 10 es de 32 puntos porcentuales.
 
 
 
@@ -652,7 +652,7 @@ browsable(
 
 <br>
 
-La Figura 11 muestra el impacto diferencial de la inflación interanual por deciles de ingreso per cápita familiar para las diferentes regiones del país en `r meses[mes_t,1]` de 2025. Como se observa la brecha de inflación por deciles de ingreso es negativa en todas las regiones indicando que los hogares de muy bajos ingresos enfrentaron una inflación que va desde 0.16 puntos porcentuales más baja que los hogares de muy altos ingresos en la región Noreste, hasta 3.58 puntos porcentuales más baja en la región Noroeste. En el total del país, estos hogares de bajos ingresos enfrentaron una inflación  `r sprintf("%.2f",cuadro1deciles[12,4])` puntos porcentuales más baja que los hogares de muy altos ingresos, como se reporta en el Cuadro 2.
+La Figura 11 muestra el impacto diferencial de la inflación interanual por deciles de ingreso per cápita familiar para las diferentes regiones del país en `r meses[mes_t,1]` de 2025. Como se observa la brecha de inflación por deciles de ingreso es negativa en todas las regiones indicando que los hogares de muy bajos ingresos enfrentaron una inflación que va desde 0.89 puntos porcentuales más baja que los hogares de muy altos ingresos en la región Noreste, hasta 2.65 puntos porcentuales más baja en la región GBA. En el total del país, estos hogares de bajos ingresos enfrentaron una inflación  `r sprintf("%.2f",abs(cuadro1deciles[12,4]))` puntos porcentuales más baja que los hogares de muy altos ingresos, como se reporta en el Cuadro 2.
 
 [**Figura 11. Brecha de inflación por región en el último mes**]{style="color:#777;font-size:13    .0pt;"}
 
